<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:overScrollMode="never"
    android:scrollbars="none"
    tools:context="com.example.mcst.cleanyourhome.LoginActivity">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="10dp"
    android:paddingBottom="10dp"
    android:paddingRight="10dp"
    android:paddingTop="10dp"
    android:background="@color/white" >



    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:srcCompat="@mipmap/imagess"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/image1"
        />
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="54dp"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/email"
        android:layout_alignBottom="@+id/login_emailid"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/image2"
        />


    <EditText
        android:layout_below="@+id/imageView7"
        android:layout_toRightOf="@+id/imageView2"
        android:id="@+id/login_emailid"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        tools:ignore="HardcodedText,RtlHardcoded"
        android:maxLines="1" />

    <View
        android:id="@+id/lineemail"
        android:layout_below="@+id/imageView2"
        android:layout_marginTop="10dp"
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/black" />
    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="54dp"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/download"
        android:layout_below="@+id/lineemail"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/image3"
         />

    <EditText
        android:layout_below="@+id/lineemail"
        android:layout_toRightOf="@+id/imageView3"
        android:layout_marginTop="17dp"
        android:id="@+id/login_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:hint="passowrd"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        tools:ignore="HardcodedText,RtlHardcoded"
        android:maxLines="1" />



    <CheckBox
        android:layout_below="@+id/login_password"
        android:layout_marginTop="10dp"
        android:id="@+id/show_hide_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_password"
        android:textColor="@color/black"
        android:textSize="20sp" />



    <Button
        android:id="@+id/loginBtn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:background="@color/background_color"
        android:padding="3dp"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:layout_below="@+id/show_hide_password"
        android:layout_centerHorizontal="true"
        />


</RelativeLayout>
</ScrollView>