<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:overScrollMode="never"
    android:scrollbars="none"
    tools:context="com.example.mcst.cleanyourhome.HomeActivity">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="10dp"
    android:paddingBottom="10dp"
    android:paddingRight="10dp"
    android:paddingTop="10dp"
android:background="@color/white"
>

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_alignParentTop="true"
        app:srcCompat="@mipmap/images"
        android:contentDescription="@string/image1" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:id="@+id/welcomeid"
        android:textSize="40sp"
        android:textStyle="italic"

        android:layout_below="@+id/imageView6"
        android:layout_centerHorizontal="true" />
    <Button
        android:id="@+id/signinbtn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="46dp"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="italic"
        android:background="@color/background_color"
        android:layout_below="@+id/welcomeid"
        android:layout_alignLeft="@+id/button"
        android:layout_alignStart="@+id/button"
        android:onClick="sign"
        />

    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:text="Register"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="italic"
        android:background="@color/background_color"
        android:layout_below="@+id/signinbtn"
        android:layout_centerHorizontal="true"
        android:id="@+id/button"
        android:onClick="regist"
        tools:ignore="HardcodedText" />

</RelativeLayout>
</ScrollView>